Enhance blog layout and add lodash test link
Updated the blog layout with a wider content width for better readability. Added a link to the lodash v5 WIP tests and clarified details about test cases and edge cases in JavaScript.

--- a/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
+++ b/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
@@ -163,7 +163,7 @@ it(\`should return the default value when path is empty\`, () => {
 
 <Layout title="Your lodash.get implementation sucks"
         description="Why you can't recreate lodash.get and why you should just use lodash.">
-  <main class="prose">
+  <main class="prose max-w-screen-lg">
     <h1>Your lodash.get Implementation Sucks</h1>
     <p>After watching a web app experience 3 white screen crashes within the
       same week I suggested introducing lodash and its <a
@@ -196,10 +196,12 @@ it(\`should return the default value when path is empty\`, () => {
     </div>
     <p>But let's start adding some test cases from the lodash source. I should
       mention that the lodash soruce code has been going through some major
-      changes and I pulled these tests from the v5 WIP. As the current version
+      changes (such as going to TS first instead of depending on @types/lodash)
+      and I pulled these tests from the v5 WIP. As the current version
       is being stripped down for rewrites, making the codebase confusing to
       traverse. But these v5 tests will
       make the point nicely.</p>
+    <p><a href="https://github.com/lodash/lodash/blob/v5-wip/test/get-and-result.spec.js" target="_blank">See the lodash tests here.</a></p>
     <p>The first failure is here:</p>
     <CodeBlock code={failTest1} />
     <p>The first issue is that the {lodashAcronym} doesn't support number keys.
@@ -216,7 +218,8 @@ it(\`should return the default value when path is empty\`, () => {
       <li>Plain key objects Object(0), Object(-0)</li>
     </ul>
     <p>So to pass this test, the implementation needs to support numbers... and
-      don't get me started on the edge cases there. Determining what is and isn't
+      don't get me started on the edge cases there. Determining what is and
+      isn't
       something in a language like JS is no easy task.</p>
     <p>This first test doesn't just fail on numbers, but on Object(0), and
       Object(-0) as well. You can fairly argue that this latter Object case is
