Update blog post to replace embedded video with external link
Replaced the embedded "JavaScript Without lodash is Wat" video with a link to the original talk on the Destroy All Software website. This change reduces content loading overhead and ensures proper attribution to the source.

--- a/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
+++ b/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
@@ -274,12 +274,7 @@ it(\`should return the default value when path is empty\`, () => {
     <p>And maybe the most egregious of all, it can't even handle basic falsy
       values.</p>
     <CodeBlock code={failTest11} />
-    <h2>JavaScript Without lodash is Wat</h2>
-    <div>
-      <video
-        controls
-        src="https://destroyallsoftware-talks.s3.amazonaws.com/wat.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIKRVCECXBC4ZGHIQ%2F20250510%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250510T180923Z&X-Amz-Expires=14400&X-Amz-SignedHeaders=host&X-Amz-Signature=ff29cda0680a5a1ae88bf11475e6f6489d93ce9323764472767a4a01651bad05"></video>
-    </div>
+    <h2><a href="https://www.destroyallsoftware.com/talks/wat" target="_blank">JavaScript Without lodash is Wat</a></h2>
     <p>If you believe you can actually reproduce lodash get from scratch into a
       single function (lodash itself does not do this), make sure you get all of
       the above cases... and add type safety as @types/lodash does.</p>
