Add blog post on burnout and update blog list
Added a new blog post titled "Notes On: Burnout" with detailed insights into the causes, effects, and types of burnout, as well as coping strategies. Updated the homepage to include a link to this new post in the blog list.

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -3,6 +3,11 @@ import Layout from "../layouts/Layout.astro";
 
 const blogs = [
   {
+    id: "notes-on-burnout",
+    link: "/blog/notes-on-burnout",
+    title: "Notes On: Burnout"
+  },
+  {
     id: 'your-lodash-get-implementation-sucks',
     link: '/blog/your-lodash-get-implementation-sucks',
     title: "You lodash.get Implementation Sucks"
