Add detailed stages of burnout to blog post
Expanded the blog post by including a breakdown of the five stages of burnout, from the Honeymoon Phase to Habitual Burnout. This addition enhances the post's depth and provides readers with a clearer understanding of how burnout evolves over time.

--- a/apps/ethang-astro/src/pages/blog/notes-on-burnout.astro
+++ b/apps/ethang-astro/src/pages/blog/notes-on-burnout.astro
@@ -9,6 +9,38 @@ import Layout from "../../layouts/Layout.astro";
       href="https://www.goodreads.com/book/show/212924023-the-trauma-of-burnout"
       target="_blank">The
       Trauma of Burnout, Dr. Claire Plumbly</a></p>
+    <p><strong>Stages of Burnout</strong></p>
+    <ul>
+      <li><strong>Stage 1 (Honeymoon Phase):</strong> Job satisfaction,
+        accepting more
+        responsibility, sustained
+        energy levels, <span class="text-error">unbridled optimism</span>,
+        commitment to job, <span class="text-error">compulsion to
+        prove yourself</span>, free-flowing creativity, high productivity
+        levels.
+      </li>
+      <li><strong>Stage 2 (Onset of Stress):</strong> (Typically goes unnoticed
+        as unusual.)
+        Inability to focus, irritability, reduced
+        sleep quality, lack of social interactions, lower productivity, anxiety,
+        avoidance of decision making, change in appetite fatigue, headache,
+        neglect of personal needs.
+      </li>
+      <li><strong>Stage 3 (Chronic Stress):</strong> Persistent tiredness,
+        procrastination, resentfulness,
+        social withdrawal, lower sexual desire, denial of problems, feel
+        threatened, feel pressured, alcohol consumption, drug consumption,
+        aggressive behavior, apathy, chronic exhaustion, cynical attitude.
+      </li>
+      <li><strong>Stage 4 (Burnout):</strong> Obsession with problems,
+        pessimistic outlook, physical symptoms, self-doubt, social isolation,
+        chronic headaches, chronic gastrointestinal problems, neglect of
+        personal needs, escapist activities, behavioral changes.
+      </li>
+      <li><strong>Stage 5 (Habitual Burnout):</strong> Chronic sadness, chronic
+        mental fatigue, chronic physical fatigue, depression.
+      </li>
+    </ul>
     <p>When faced with stress, the hypothalamus signals the pituitary gland,
       which in turn signals the adrenal glands to release stress hormones,
       primarily cortisol and adrenaline. These hormones prepare the body for
