Fix typo in blog post on burnout
Corrected a grammatical error in a list item to improve readability. Changed "Listen calming music" to "Listen to calming music" for clarity.

--- a/apps/ethang-astro/src/pages/blog/notes-on-burnout.astro
+++ b/apps/ethang-astro/src/pages/blog/notes-on-burnout.astro
@@ -135,7 +135,7 @@ import Layout from "../../layouts/Layout.astro";
       <li>Breathing exercises and mediation. Place your hand over your heart
         during breathing exercises to warm it.
       </li>
-      <li>Listen calming music or a calming voice.</li>
+      <li>Listen to calming music or a calming voice.</li>
       <li>Yoga/Pilates</li>
       <li>Imagine the feeling of compassion. (Prayer works well here.)</li>
       <li>Connect with others whom you feel safe and comfortable around.</li>
