--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -21,6 +21,9 @@ import Layout from "../layouts/Layout.astro";
                 <a rel="prefetch" href="/blog/forcing-react">Forcing React to be What It Isn't</a>
             </li>
             <li>
+                <a rel="prefetch" href="/blog/use-windows">You Should Use Windows</a>
+            </li>
+            <li>
                 <a rel="prefetch" href="/blog/local-first">The Local First Stack</a>
             </li>
             <li>
