Fix typo in "Copilot" within blog post
Corrected the capitalization of "Copilot" to ensure consistency and proper naming. This improves the readability and professionalism of the blog content.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/blog/use-windows.astro
+++ b/apps/ethang-astro/src/pages/blog/use-windows.astro
@@ -222,7 +222,7 @@ const toc = [
             people install on their phones has steadily decreased overtime. They opt for the defaults and browser.</p>
         <p>That being said, in order to have a comfortable, healthy experience with your OS, you need to be able to
             remove the constant advertising.</p>
-        <p>CoPilot for example... no, thank you. Removing the base installation took a few minutes, but I was able to
+        <p>Copilot for example... no, thank you. Removing the base installation took a few minutes, but I was able to
             remove it thanks to WinGet.</p>
         <video controls src="/videos/remove-copilot.mp4"></video>
         <p>In fact, WinGet gives you a dangerous level of access to uninstalling all the Microsoft junk. I wouldn't
