--- a/apps/ethang-astro/src/pages/blog/use-windows.astro
+++ b/apps/ethang-astro/src/pages/blog/use-windows.astro
@@ -21,17 +21,27 @@ import winGetList from "../../images/windows/winget-list.png";
 import promotion1 from "../../images/windows/promotion-1.png";
 import promotion2 from "../../images/windows/promotion-2.png";
 import map from 'lodash/map.js';
+import CodeBlock from "../../components/CodeBlock.astro";
 
 const toc = [
-    {label: "WinGet > apt", id: 'wingetApt'},
+    {label: "WinGet > apt", id: 'winGetApt'},
     {label: "Everything Search", id: 'everythingSearch'},
-    {label: "PowerToys", id: `powerTosy`},
+    {label: "PowerToys", id: `powerToys`},
     {label: "Screenshot and Video Tools", id: `screenshotVideo`},
     {label: "Powershell > bash", id: `powershellBash`},
     {label: "GUI Customization", id: `guiCustomization`},
     {label: "Removing the Branding", id: `removingBranding`},
     {label: "Conclusion", id: `conclusion`},
 ]
+
+const ubuntuInstallToolbox = `
+sudo apt install libfuse2 libxi6 libxrender1 libxtst6 mesa-utils libfontconfig libgtk-3-bin
+
+curl -fsSL https://raw.githubusercontent.com/nagygergo/jetbrains-toolbox-install/master/jetbrains-toolbox.sh | bash`;
+
+const winGetInstallToolbox = `winget install JetBrains.Toolbox`;
+
+const winGetInstallEverything = `winget install voidtools.Everything`;
 ---
 
 <Layout>
@@ -66,14 +76,9 @@ const toc = [
                 script</a> to help me install it properly. Of course, it still doesn't tell you that Toolbox also has
             many dependencies. So the final solution were these two commands <strong>which includes a user made
                 script:</strong></p>
-        <div class="mockup-code">
-            <pre data-prefix="~">sudo apt install libfuse2 libxi6 libxrender1 libxtst6 mesa-utils libfontconfig libgtk-3-bin</pre>
-            <pre data-prefix="~">curl -fsSL https://raw.githubusercontent.com/nagygergo/jetbrains-toolbox-install/master/jetbrains-toolbox.sh | bash</pre>
-        </div>
+        <CodeBlock language="bash" code={ubuntuInstallToolbox} />
         <p>With WinGet?</p>
-        <div class="mockup-code">
-            <pre data-prefix="~">winget install JetBrains.Toolbox</pre>
-        </div>
+        <CodeBlock language="powershell" code={winGetInstallToolbox} />
         <p>The id "JetBrains.Toolbox" is easily findable with a quick search via CLI. For Ubuntu, it took multiple
             Google searches to find a simple install.</p>
         <p>Mac? Mac has no built in package manager and brew is meh. Similar to Chocolately, Homebrew only tracks what's installed through it, not the entire system.</p>
@@ -81,9 +86,7 @@ const toc = [
         <p>Need to quickly find out where an installation is, or where anything is on the file system? Introducing <a
                 target="_blank" href="https://www.voidtools.com">Everything Search</a>.</p>
         <video controls src="/videos/everything-search.mp4"></video>
-        <div class="mockup-code">
-            <pre data-prefix="~">winget install voidtools.Everything</pre>
-        </div>
+        <CodeBlock language="powershell" code={winGetInstallEverything} />
         <p>There are multiple alternatives for linux to include FSearch and Catfish. For CLI Everything Search has a
             command line tool which acts as a faster/indexed version of PowerShell's own <code>Get-ChildItem</code></p>
         <p>Everything Search also introduces you to a small ecosystem of plugins that can hook into it's indexed database of
