--- a/apps/ethang-astro/src/components/LocalImage.astro
+++ b/apps/ethang-astro/src/components/LocalImage.astro
@@ -26,11 +26,13 @@ const id = `modal${v7().replaceAll('-', '')}`;
         <form method="dialog">
             <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         </form>
-        <Image
-                class="size-full object-contain m-0"
-                src={src}
-                alt={alt}
-        />
+        <button class="cursor-pointer" onclick={`${id}.close()`}>
+            <Image
+                    class="size-full object-contain m-0"
+                    src={src}
+                    alt={alt}
+            />
+        </button>
     </div>
     <form method="dialog" class="modal-backdrop">
         <button>close</button>
