Add `select-none` class to prevent text selection
Applied the `select-none` class to specific elements in the Layout and CodeBlock components to disable unintended text selection. This improves the overall user experience by preventing accidental content highlighting in non-interactive areas.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/components/CodeBlock.astro
+++ b/apps/ethang-astro/src/components/CodeBlock.astro
@@ -15,7 +15,7 @@ const codeHtml = hljs.highlight(code, {
 ---
 
 <pre
-  class="whitespace-pre-wrap max-w-[100vw]">
+  class="whitespace-pre-wrap max-w-[100vw] select-none">
     <code class={resolvedLanguage}>
     <Fragment set:html={codeHtml} />
     </code>
