--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
 </head>
 <body>
 <div class="grid sm:grid-cols-[auto_1fr] gap-4">
-    <div class="hidden sm:block border-r-2 min-h-screen">
+    <div class="hidden sm:block border-r-2 min-h-screen select-none">
         <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
         <nav class="grid gap-4" aria-label="Main">
             <ul class="menu menu-sm">
@@ -94,7 +94,7 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
             </ul>
         </nav>
     </div>
-    <div class="sm:hidden navbar bg-base-100">
+    <div class="sm:hidden navbar bg-base-100 select-none">
         <div class="navbar-start">
             <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
         </div>
